# Gyllir

./: .gitignore  CMakeLists.txt  GyllirConfig.yr  README.md  main.yr
bash/: _gyllir  gyllir_vars.sh  install_complete.sh
res/css/: bootstrap.css  highlight.css  sidebar.css  style.css
res/html/: declaration.html  footer.html  header.html  inline_code.html  leaf_node.html  member_head.html  members.html  module_head.html  module_table.html  parent_node.html  parent_node_no_href.html  submodule.html
res/js/: bootdoc.js  highlight.js  script.js
src/: GyllirConfig.yr  gyllir.yr  main.yr
src/GyllirConfig/: FileStruct.yr  Toml.yr
src/gyllir/: args.yr  config.yr  doc.yr  repo.yr  utils.yr
src/gyllir/args/: _.yr  build.yr  clean.yr  doc.yr  init.yr  publish.yr  remove.yr  sub.yr  test.yr
src/gyllir/config/: _.yr  command.yr  dependency.yr  errors.yr  type.yr  url.yr  version.yr
src/gyllir/config/version/: filter.yr
src/gyllir/doc/: comment.yr  dumper.yr  formatter.yr  html.yr  loader.yr  parser.yr  symbols.yr  types.yr
src/gyllir/doc/comment/: node.yr  parser.yr  tokens.yr  utf.yr
src/gyllir/doc/comment/node/: code.yr  list.yr  style.yr  text.yr
src/gyllir/doc/html/: _.yr  body.yr  foot.yr  formatter.yr  head.yr  node.yr  ressources.yr  table.yr
src/gyllir/doc/markdown/: parser.yr  tokens.yr
src/gyllir/doc/symbols/: _.yr  aka.yr  aka_.yr  assert_.yr  assertion.yr  block.yr  class_.yr  ctor.yr  enum_.yr  function.yr  global.yr  implementation.yr  macro_.yr  macrorule.yr  metamodule.yr  method.yr  module.yr  none_.yr  param.yr  struct_.yr  template.yr  template_cond.yr  trait_.yr  variable.yr
src/gyllir/doc/symbols/template/: and.yr  any.yr  ofv.yr  var.yr  variadic.yr
src/gyllir/doc/types/: _.yr  any.yr  array.yr  base.yr  bool_.yr  char.yr  class_.yr  class_pointer.yr  closure.yr  dg_pointer.yr  enum_.yr  float.yr  fn_pointer.yr  fptr.yr  int.yr  map.yr  option.yr  pointer.yr  range.yr  scalar.yr  slice.yr  struct_.yr  tuple.yr  void_.yr
src/gyllir/repo/: builder.yr  cleaner.yr  defaults.yr  dependency.yr  doc.yr  init.yr  manager.yr  publisher.yr  runner.yr
src/gyllir/utils/: colors.yr  errors.yr  git.yr  log.yr  options.yr  path.yr  string.yr
src/gyllir_config/: args.yr  builder.yr  file_struct.yr  loader.yr
src/gyllirconfig/: filestruct.yr  toml.yr
src/utils/: errors.yr  git.yr
